# local-assistant

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
docs/: 01-architecture-plan.md  cloud-models.md  file-permissions-plan.md  multi-session-chat.md  settings-panel-plan.md  testflight-submission-guide.md  vision.md  web-search-provider.md
skills/skill-creator/: SKILL.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cloud.rs  fs_ops.rs  gmail.rs  mcp.rs  mod.rs  ollama_check.rs  permissions.rs  skills.rs  web.rs
src/components/chat/: ChatHeader.tsx  ChatView.tsx  InputBar.tsx  MarkdownRenderer.tsx  MessageList.tsx  MessageSegment.tsx  ResponseGroup.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/mcp/: McpPanel.tsx
src/components/models/: ModelManager.tsx  ModelPullForm.tsx
src/components/onboarding/: OllamaSetup.tsx
src/hooks/: useChat.ts  useContextManager.ts  useModels.ts  useOllamaHealth.ts  usePromptHistory.ts  useSkills.ts
src/services/: history.ts  mcp.ts  ollama.ts  sessions.ts  streamParser.ts  webTools.ts
src/stores/: chatStore.ts  mcpStore.ts  modelStore.ts  permissionStore.ts  searchStore.ts  settingsStore.ts  skillStore.ts
src/types/: chat.ts  ollama.ts  session.ts  skill.ts
src/utils/: responseParser.ts  skillLoader.ts  tokenEstimate.ts  toolParser.ts
(+4 files in other folders)
