[package]
name = "local-assistant"
version = "0.1.0"
description = "Local AI Assistant"
authors = ["nobu"]
edition = "2021"

[lib]
name = "local_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
dirs-next = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.22"
urlencoding = "2"
